# letmelearn

./: .env  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml  requirements-test.txt  requirements.base.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yaml
analysis/: .session  2026-04-07-api-review.md  2026-04-08-api-architect-review.md  2026-04-08-functional-analysis.md  2026-04-08-ui-ux-review.md  2026-04-09-api-review.md  2026-04-09-api-security-review.md  2026-04-09-functional-analysis-backlog-validation.md  2026-04-09-functional-analysis.md  2026-04-09-ui-ux-comprehensive-review.md  2026-04-09-ui-ux-review.md  2026-04-10-api-review.md  2026-04-10-mongodb-less-tests.md  2026-04-10-ui-ux-review.md  api.md  session-feedback-functional.md  ux-ui.md
docs/: architecture.md  dashboard.md  openapi.yaml  testing.md  workflow.md
docs/bug-analysis/: auth-session-persistence.md  elapsed-time-display.md  feed-not-refreshing.md  session-registration.md  style-switch-quiz.md  (+1 more)
letmelearn/: __init__.py  api.py  app.py  auth.py  config.py  data.py  errors.py  follows.py  oauth.py  sessions.py  setup.py  stats.py  treeitems.py  ui.py  web.py
media/: flashcards.mov
reporting/: code-review-baseline.md
scripts/: migrate_feed_to_sessions.py
tests/: conftest.py  test_auth.py  test_data.py  test_errors.py  test_feed.py  test_folders.py  test_follows.py  test_rate_limit.py  test_schemas.py  test_security.py  test_session_feedback.py  test_session_persistence.py  test_sessions.py  test_stats.py  test_topics.py  test_treeitems.py  test_users.py
(+76 files in other folders)
